# nand2tetris

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  main.cpp
include/: Assembler.hpp  Ast.hpp  CMakeLists.txt  Errors.hpp  Filesystem.hpp  FwdDecl.hpp  Instructions.hpp  Iterator.hpp  Lexer.hpp  Reader.hpp  SymbolTable.hpp  Visitors.hpp
include/ASMTranslator/: ASMGenerator.hpp  AST.hpp  VMCommand.hpp  VMData.hpp  VMParser.hpp
include/Assembler/: Ast.hpp  Driver.hpp  Instructions.hpp  Lexer.hpp  Parser.hpp  Visitors.hpp
include/Compiler/JackCompiler/: AST.hpp  Lexer.hpp  Parser.hpp  Token.hpp
include/Simulator/: CMakeLists.txt
include/Simulator/HardwareSimulator/: Bit.hpp  Computer.hpp  Gates.hpp  Helper.hpp  Memory.hpp  Parser.hpp
include/Utils/: Characters.hpp  ConstantString.hpp  Errors.hpp  Reader.hpp  TokenBase.hpp  Traits.hpp
projects/01/: 01.md  And16.hdl  And4.hdl  DMux.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8.hdl  Mux8Way16.hdl  Not16.hdl  Not4.hdl  Not8.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
projects/02/: 02.md  ALU.hdl  FullAdder.hdl
projects/03/: 03.md
projects/03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl  Register.hdl
projects/03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
projects/04/: 04.md
projects/04/fill/: Fill.asm
projects/04/mult/: Mult.asm  Mult_v1.asm
projects/05/: 05.md  CPU.hdl  Memory.hdl
projects/07/: 07.md
projects/07/MemoryAccess/StaticTest/: StaticTest.asm
projects/07/StackArithmetic/SimpleAdd/: SimpleAdd.asm
projects/07/StackArithmetic/StackTest/: StackTest.asm
src/: Assembler.cpp  CMakeLists.txt  Errors.cpp  Instructions.cpp  Lexer.cpp  OriginalSourceWriter.cpp  Parser.cpp  Reader.cpp  SrcRewriteVisitor.cpp  SymbolResolvedWriter.cpp
src/ASMTranslator/: ASMGenerator.cpp  CMakeLists.txt  VMCommand.cpp  VMParser.cpp
src/Assembler/: Assembler.cpp  CMakeLists.txt  Instructions.cpp  Lexer.cpp  OriginalSourceWriter.cpp  Parser.cpp
src/Compiler/: CMakeLists.txt  Elements.hpp  Grammar.hpp  Lexer.cpp  Parser.cpp  Token.cpp
src/Simulator/: CMakeLists.txt
src/Simulator/HardwareSimulator/: CMakeLists.txt  Computer.cpp  Gates.cpp  Helper.cpp  Memory.cpp  Parser.cpp
src/Utils/: CMakeLists.txt  Characters.cpp  Errors.cpp  Iterator.cpp  Reader.cpp
tests/: CMakeLists.txt  runner.hpp  test_assembler.cpp  test_bit_conversion.cpp  test_lexer.cpp  test_parser.cpp
tests/ASMTranslator/: CMakeLists.txt  test_vm_parser.cpp
tests/ASMTranslator/inputs/output/: Add.asm  BasicLoop.asm  FibonacciElement.asm  FibonacciSeries.asm  SimpleFunction.asm
tests/ASMTranslator/inputs/src/: Add.vm  And.asm  And.vm  BasicTest.asm  FibonacciElement.vm  NestedCall.asm  PointerTest.asm  SimpleAddFunction.asm  SimpleAddFunction.vm  StackTest.asm  Sub.asm  Sub.vm
tests/Assembler/: CMakeLists.txt  test_assembler.cpp  test_bit_conversion.cpp  test_lexer.cpp  test_parser.cpp
tests/Assembler/inputs/expected/unary/: Test.hack
tests/Assembler/inputs/src/rect/: Rect.asm
tests/Simulator/: CMakeLists.txt  HardwareSimulatorPrettyPrinter.py  data.hpp  test_computer.cpp  test_gate_defs.cpp  test_memory.cpp
tests/VMTranslator/: CMakeLists.txt
tests/assembler/rect/: Rect.hack
tests/inputs/: 06.md
tests/inputs/rect/: Rect.asm  RectL.asm
tests/inputs/unary/: Test.asm
tools/: ASMSourceRewriter.cpp  ASMSymbolResolvedRewriter.cpp  CMakeLists.txt  HardwareSimulator.cpp
